2010-10-27  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        If WebGL is running on top of a strict version of OpenGL ES it should make sure attribs have buffers assigned at all times
        https://bugs.webkit.org/show_bug.cgi?id=47964

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::validateRenderingState): Minimum checking: if input <= 0, only check if each enabled vertex attribute is bound to a buffer.
        (WebCore::WebGLRenderingContext::drawArrays): If underlying GL performs bounds checking, we still need to do the minimum checking using validateRenderingState.
        (WebCore::WebGLRenderingContext::drawElements): Ditto.
        * html/canvas/WebGLRenderingContext.h: Add a comment for input <= 0 in validateRenderingState.


Canonical link: https://commits.webkit.org/61182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70661 268f45cc-cd09-0410-ab3c-d52691b4dbfc